Fuzzer intial:  - created fuzzer wrapper around rust fuzz calls  - created the rust fuzzer  - created example ways to use it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,28 @@
-# strategy will link the static lib both driver.a + engine.a 
-# into a static lib called peelFuzz.a this can be called by anyone
+cmake_minimum_required(VERSION 3.20)
+
+project(
+  PeelFuzz
+  VERSION 0.0.1
+  LANGUAGES CXX
+)
+
+if(NOT DEFINED CMAKE_CXX_STANDARD)
+	set(CMAKE_CXX_STANDARD 17)
+endif()
+
+# Export ClangD
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# Adding subdirectories
+add_subdirectory(Driver)
+
+# create a static lib
+add_library(PeelFuzz STATIC
+  peelfuzz.cpp
+)
+
+# link to other static libs
+target_link_libraries(PeelFuzz
+  PUBLIC
+  driver
+)
