Update build system  - bundle up the Driver.a and Engine.a to one binary for users to link    to  - added multi core fuzzing for std context  - TODO: support for baremetal:(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,16 +13,42 @@ endif()
 # Export ClangD
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Adding subdirectories
+# --- Rust engine (cargo build) ---
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(CARGO_PROFILE "debug")
+  set(CARGO_FLAGS "")
+else()
+  set(CARGO_PROFILE "release")
+  set(CARGO_FLAGS "--release")
+endif()
+
+set(RUST_LIB "${CMAKE_SOURCE_DIR}/Engine/target/${CARGO_PROFILE}/libPeelFuzz.a")
+
+add_custom_command(
+  OUTPUT ${RUST_LIB}
+  COMMAND cargo build ${CARGO_FLAGS}
+  WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/Engine"
+  COMMENT "Building Rust engine (${CARGO_PROFILE})"
+)
+
+add_custom_target(rust_engine DEPENDS ${RUST_LIB})
+
+# --- C++ Driver (object library) ---
 add_subdirectory(Driver)
 
-# create a static lib
-add_library(PeelFuzz STATIC
-  peelfuzz.cpp
+# --- Merge into single libPeelFuzz.a ---
+set(MERGED_LIB "${CMAKE_BINARY_DIR}/libPeelFuzz.a")
+set(RUST_EXTRACT_DIR "${CMAKE_BINARY_DIR}/_rust_objs")
+
+add_custom_command(
+  OUTPUT ${MERGED_LIB}
+  COMMAND ${CMAKE_COMMAND} -E rm -rf "${RUST_EXTRACT_DIR}"
+  COMMAND ${CMAKE_COMMAND} -E make_directory "${RUST_EXTRACT_DIR}"
+  COMMAND ${CMAKE_COMMAND} -E chdir "${RUST_EXTRACT_DIR}" ar x "${RUST_LIB}"
+  COMMAND sh -c "ar crs ${MERGED_LIB} ${RUST_EXTRACT_DIR}/*.o $<TARGET_OBJECTS:driver>"
+  COMMAND ${CMAKE_COMMAND} -E rm -rf "${RUST_EXTRACT_DIR}"
+  DEPENDS rust_engine driver
+  COMMENT "Merging Rust + Driver objects into libPeelFuzz.a"
 )
 
-# link to other static libs
-target_link_libraries(PeelFuzz
-  PUBLIC
-  driver
-)
+add_custom_target(PeelFuzz ALL DEPENDS ${MERGED_LIB})
