Fix multicore support in the Driver  - resolved issue where Driver API still gets pinned to one core  - readme

--- a/Examples/Bug1/makefile
+++ b/Examples/Bug1/makefile
@@ -1,14 +1,20 @@
 CXX=clang++
-CXXFLAGS=-std=c++17 -O1 -g -fno-omit-frame-pointer \
+# -O2 for better performance (or -O3 for maximum speed)
+# Remove -g for release builds (debug symbols slow things down)
+CXXFLAGS=-std=c++17 -O3 -fno-omit-frame-pointer \
+  -fsanitize=address,undefined \
   -fsanitize=fuzzer-no-link \
-  -fsanitize-coverage=trace-pc-guard
+  -fsanitize-coverage=trace-pc-guard,indirect-calls,trace-cmp
+
+SRC=bug1.cpp
+EXE=bug1
 
 PEELFUZZ_LIB=../../Release/libPeelFuzz.a
 
 
 default:
-	$(CXX) $(CXXFLAGS) bug1.cpp -o bug1 \
+	$(CXX) $(CXXFLAGS) $(SRC) -o $(EXE) \
 	  $(PEELFUZZ_LIB) -pthread -ldl -lm
 
 run:
-	./bug1
+	./$(EXE)
