--- a/Driver/CMakeLists.txt
+++ b/Driver/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_library(driver
-  OBJECT
-  fuzzer.cpp
-)
+# Header-only library - all implementation is in the Rust Engine
+add_library(driver INTERFACE)
 
-target_include_directories(driver PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_include_directories(driver INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
